feat: use compact object headers